--- a/app/src/main/res/layout/frag_sales.xml
+++ b/app/src/main/res/layout/frag_sales.xml
@@ -34,13 +34,16 @@
         android:id="@+id/btn_add"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
         android:layout_marginBottom="9dp"
         android:text="+"
         android:textStyle="bold"
         app:backgroundTint="#03A9F4"
         app:layout_constraintBottom_toTopOf="@+id/rv_sales"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.97"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
