--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.498">
 
         <Button
-            android:id="@+id/btn_signup"
+            android:id="@+id/btn_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -27,6 +27,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:text="회원가입"
+            android:textColor="#FFFFFF"
             android:textStyle="bold"
             app:backgroundTint="#536DFE"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +36,7 @@
             app:layout_constraintTop_toBottomOf="@+id/et_loginpasswordcheck" />
 
         <EditText
-            android:id="@+id/et_email"
+            android:id="@+id/et_loginid"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -46,13 +47,13 @@
             android:hint="e-mail 주소를 입력해주세요"
             android:inputType="textEmailAddress"
             android:textColor="#000000"
-            app:layout_constraintBottom_toTopOf="@+id/et_loginpassword"
+            app:layout_constraintBottom_toTopOf="@+id/et_loginpw"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/et_loginpassword"
+            android:id="@+id/et_loginpw"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -66,7 +67,7 @@
             app:layout_constraintBottom_toTopOf="@+id/et_loginpasswordcheck"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_email" />
+            app:layout_constraintTop_toBottomOf="@+id/et_loginid" />
 
         <EditText
             android:id="@+id/et_loginpasswordcheck"
@@ -81,15 +82,15 @@
             android:hint="비밀번호 확인"
             android:inputType="textPassword"
             android:textColor="#000000"
-            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
+            app:layout_constraintBottom_toTopOf="@+id/btn_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_loginpassword" />
+            app:layout_constraintTop_toBottomOf="@+id/et_loginpw" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/iv_login"
         android:layout_width="154dp"
         android:layout_height="133dp"
         android:layout_marginStart="128dp"
