--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -9,6 +9,17 @@
 
 
     <include
+        layout="@layout/view_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <include
         layout="@layout/view_loader"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -27,7 +38,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.671">
+        app:layout_constraintVertical_bias="0.832">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_gallerytakepicture"
@@ -162,20 +173,5 @@
             android:adjustViewBounds="true"
             app:srcCompat="@drawable/howling_wolf" />
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/tv_member_init"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:text="회원정보"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
