--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -78,13 +78,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
             android:ems="10"
-            android:hint="비밀번호를 입력해주세요"
+            android:hint="비밀번호(영문,특수문자,숫자 포함 10자리 이상)"
             android:inputType="textPassword"
             android:textColor="#000000"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/et_loginpasswordcheck"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
